[package]
name = "neoproxy-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance anti-censorship proxy framework in Rust"

[profile.release]
lto = true         
codegen-units = 1   
strip = true       

[dependencies]
tokio = { version = "1.36", features = ["full"] }

bytes = "1.5"

sha2 = "0.10"

tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.1"    
webpki-roots = "0.26"     

nom = "7.1"               

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] } 

anyhow = "1.0"           
thiserror = "1.0"          
tracing = "0.1"            
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
