[package]
name = "neoproxy-rs"
version = "0.1.0"
edition = "2021"
description = "High-performance anti-censorship proxy framework in Rust"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
tokio = { version = "1.36", features = ["full"] }
bytes = "1.5"
sha2 = "0.11.0"

rustls = { package = "rustls-jls", version = "1.3.1" }
rustls-pemfile = "2.1"
webpki-roots = "1"

nom = "8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

anyhow = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rcgen = "0.14.7"
subtle = "2.6"
